// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLogo.vue should match snapshot with no msg 1`] = `undefined`;

exports[`AppLogo.vue should match snapshot with type prop as error 1`] = `
<div class="v-snack v-snack--active v-snack--auto-height v-snack--bottom" name="v-snack-transition">
  <div class="v-snack__wrapper">
    <div class="v-snack__content"><i aria-hidden="true" class="v-icon mr-3 material-icons theme--light error--text" style="font-size: 28px;">error</i>
      This is a test notification.
      <button type="button" class="v-btn v-btn--flat theme--light pink--text">
        <div class="v-btn__content">Close</div>
      </button></div>
  </div>
</div>
`;

exports[`AppLogo.vue should match snapshot with type prop as info 1`] = `
<div class="v-snack v-snack--active v-snack--auto-height v-snack--bottom" name="v-snack-transition">
  <div class="v-snack__wrapper">
    <div class="v-snack__content"><i aria-hidden="true" class="v-icon mr-3 material-icons theme--light info--text" style="font-size: 28px;">info</i>
      This is a test notification.
      <button type="button" class="v-btn v-btn--flat theme--light pink--text">
        <div class="v-btn__content">Close</div>
      </button></div>
  </div>
</div>
`;

exports[`AppLogo.vue should match snapshot with type prop as success 1`] = `
<div class="v-snack v-snack--active v-snack--auto-height v-snack--bottom" name="v-snack-transition">
  <div class="v-snack__wrapper">
    <div class="v-snack__content"><i aria-hidden="true" class="v-icon mr-3 material-icons theme--light success--text" style="font-size: 28px;">check_circle</i>
      This is a test notification.
      <button type="button" class="v-btn v-btn--flat theme--light pink--text">
        <div class="v-btn__content">Close</div>
      </button></div>
  </div>
</div>
`;

exports[`AppLogo.vue should match snapshot with type prop as warning 1`] = `
<div class="v-snack v-snack--active v-snack--auto-height v-snack--bottom" name="v-snack-transition">
  <div class="v-snack__wrapper">
    <div class="v-snack__content"><i aria-hidden="true" class="v-icon mr-3 material-icons theme--light warning--text" style="font-size: 28px;">warning</i>
      This is a test notification.
      <button type="button" class="v-btn v-btn--flat theme--light pink--text">
        <div class="v-btn__content">Close</div>
      </button></div>
  </div>
</div>
`;
